tests/errors/test_error_no_endif.f90
PROGRAM test
  IF (a > b) THEN
    a = b
END PROGRAM test